@@ -1,3 +1,5 @@
+* Added -n/--name-only option to muninn-info.
+
 6.5 2025-03-25
 ~~~~~~~~~~~~~~
 
